--- a/style.css
+++ b/style.css
@@ -3,3 +3,81 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+
+* {
+  margin:0;
+}
+
+
+
+header {
+  background-color: #FFDBAA;
+  padding:25px;
+  color: #553100;
+}
+
+ .nbtn:hover{
+   background-color: blue;
+  }
+
+ .nbtn {
+      margin-left: 20px;
+      background-color: #805215;
+      color: white;
+      width:90px;
+      padding: 10px;
+}
+
+.card-btn2 {
+      background-color: #805215;
+      color:white;
+      width:300px;
+      /* margin-left: 50px; */
+
+    }
+
+.card-btn2:hover{
+        background-color: blue;
+  }
+
+.card-btn3 {
+      background-color: #805215;
+      color:white;
+      width:1100px;
+}
+
+.card-btn3:hover{
+        background-color: blue;
+}
+
+.card-deck {
+   margin-bottom: 50px;
+   /* align-items: center; */
+   text-align: center;
+}
+
+body{
+  background-color: #D4A76A;
+}
+
+.container{
+  margin-top:50px;
+}
+
+.card-title {
+  text-align:center;
+}
+
+p {
+  font-size: 16px;
+}
+
+
+.about{
+  padding:30px;
+  text-align: center;
+}
+
+.shadow {
+  box-shadow: rgba(255, 255, 255, 0.5);
+}
